avvidenc/dec: Disable more hardware encoder/decoders

Important when using a system ffmpeg/libav.

https://bugzilla.gnome.org/show_bug.cgi?id=774278